--- a/templates/terminal.html
+++ b/templates/terminal.html
@@ -41,6 +41,9 @@
                 </div>
                 <button type="button" id="loginButton" class="submit-button" style="width:100%;">> Authenticate_</button>
                 <div id="loginFeedback" class="feedback neutral" style="margin-top: 15px; min-height: 1.2em;"></div>
+                <div style="margin-top: 20px; text-align: center;">
+                    <a href="/" class="back-button" style="text-decoration: none;">[ Return to Mainframe ]</a>
+                </div>
             </form>
 
             <!-- Registration Form -->
